# intro-claire

./: README.md  pyproject.toml
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: README.md  template.sh
installation/docker-amd64-cuda/CSCS-Todi-setup/: README.md
installation/docker-amd64-cuda/CSCS-Todi-setup/template-submit-examples/: minimal.sh  remote-development.sh  test-interactive.sh  unattended-distributed.sh  unattended.sh
installation/docker-amd64-cuda/EPFL-SCITAS-setup/: README.md
installation/docker-amd64-cuda/EPFL-SCITAS-setup/template-submit-examples/: minimal.sh  remote-development.sh  unattended-distributed.sh  unattended.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/template-submit-examples/: first-steps.sh  minimal.sh  remote-development.sh  unattended.sh
installation/docker-amd64-cuda/from-scratch-template/: environment.yml
reproducibility-scripts/: template-experiment.sh  template-sweep.yaml
src/claire_intro/: template_experiment.py
src/claire_intro/configs/: setup.yaml
src/claire_intro/utils/: __init__.py
template/: template-variables.env
